--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-Hello World
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JakPeers - Embracing Humanity</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+</head>
+<body>
+  <div class="cover">
+    <div class="overlay"></div>
+    <div class="nav">
+      <img class="site-logo" src="images/JP_logo.png" alt="JakPeers" title="JakPeers">
+      <nav class="site-nav">
+        <ul>
+          <li>
+            <a href="#about" title="About">About</a>
+          </li>
+          <li>
+            <a href="#join" title="Join Us">Join Us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="section container">
+      <h1 class="section-heading">Embrace Humanity.</h1>
+      <h4 class="section-description">Join us and volunteer for a better world.</h4>
+      <div class="action-buttons">
+        <a class="button button-white" href="#about">learn more</a>
+        <a class="button button-orange" href="#join">join us</a>
+      </div>
+    </div>
+    <div class="more">
+      <a href="#quote">
+        <i class="fa fa-angle-down fa-4x"></i>
+      </a>
+    </div>
+  </div>
+  <div class="section about" id="about">
+    <div class="container">
+      <h1 class="section-heading">About</h1>
+      <div class="section-text">
+        <p>
+          Awareness has been the root of many social problems. There are a lot of NGOs and projects all over Jakarta targeting certain specific needs of the society all over the world. However, lack of support makes it ineffective.
+        </p>
+        <p>
+          On the other hand, many people have the willingness to contribute to the society but the hassle of being an active member in an organisation stops them from doing so. Morever, it's not easy to find projects that interests and ignites the passion that exists within their hearts. 
+        </p>
+        <p>
+          JakPeers aims to solve the problem by connecting volunteers all over Jakarta to the projects hosted by NGOs, governments, companies, even individuals. We hope that JakPeers provide the kindhearted yet busy people the platform to volunteer efficiently and practically.
+        </p>
+      </div>
+      <div class="row section-diagrams">
+        <div class="section-diagram column" id="find">
+          <img src="images/JP_find" alt="Find" title="Find">
+          <h4 class="diagram-title">Find</h4>
+          <p class="diagram-description">nearby volunteering events hosted by NGOs, governments, companies or individuals.</p>
+        </div>
+        <div class="section-diagram column" id="connect">
+          <img src="images/JP_connect" alt="Connect" title="Connect">
+          <h4 class="diagram-title">Connect</h4>
+          <p class="diagram-description">with a large community of like-minded people who wants to develop the nation by volunteering.</p>
+        </div>
+        <div class="section-diagram column" id="customize">
+          <img src="images/JP_customize" alt="Customize" title="Customize">
+          <h4 class="diagram-title">Customize</h4>
+          <p class="diagram-description">your preferences and see only events you are interested in. Be it about economic empowerement, education or even human rights.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="join" id="join">
+    <div class="overlay"></div>
+    <h1 class="join-title big-title">
+      Join Us
+      <i class="fa fa-angle-right"></i>
+    </h1>
+    <div class="container">
+      <div class="join-desc section">
+        <h3>Be a part of volunteers that change the world.</h3>
+        <p>Although we haven't launched yet, you can sign up for our newsletter and be the first to receive the latest from us.</p>
+      </div>
+      <div class="row">
+        <form action="//irvinshandy.us12.list-manage.com/subscribe/post?u=a4f0372d6950eb63e9e6aed1d&amp;id=2bce69d4af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="controls">
+            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+              <input type="text" name="b_a4f0372d6950eb63e9e6aed1d_2bce69d4af" tabindex="-1" value="">
+            </div>
+            <input type="submit" class="button button-grey" href="#submit" value="Subscribe" name="subscribe">
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+  </div>
+</body>
