Remove a paragraph in about

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <h1 class="section-heading">About</h1>
       <div class="section-text">
         <p>
-          Awareness has been the root of many social problems. There are a lot of NGOs and projects all over Jakarta targeting certain specific needs of the society all over the world. However, lack of support makes it ineffective.
+          Awareness has been the root of many social problems. There are a lot of NGOs and projects all over Jakarta targeting certain needs of the society all over the world. However, lack of support makes it ineffective.
         </p>
         <p>
-          On the other hand, many people have the willingness to contribute to the society but the hassle of being an active member in an organisation stops them from doing so. Morever, it's not easy to find projects that interests and ignites the passion that exists within their hearts. 
+          JakPeers aims to solve the problem by connecting volunteers all over Jakarta to the projects hosted by NGOs, governments, companies, even individuals.
         </p>
         <p>
-          JakPeers aims to solve the problem by connecting volunteers all over Jakarta to the projects hosted by NGOs, governments, companies, even individuals. We hope that JakPeers provide the kindhearted yet busy people the platform to volunteer efficiently and practically.
+          We hope that JakPeers provide the kindhearted yet busy people the platform to volunteer efficiently and practically.
         </p>
       </div>
       <div class="row section-diagrams">
