Change the join description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="join-desc section">
         <h3>Be a part of volunteers that change the world.</h3>
-        <p>Although we haven't launched yet, you can sign up for our newsletter and be the first to receive the latest from us.</p>
+        <p>Show your support to make this thing happens.</p>
       </div>
       <div class="row">
         <form action="//irvinshandy.us12.list-manage.com/subscribe/post?u=a4f0372d6950eb63e9e6aed1d&amp;id=2bce69d4af" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
