Change the last paragraph in about section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           JakPeers aims to solve the problem by connecting volunteers all over Jakarta to the projects hosted by NGOs, governments, companies, even individuals.
         </p>
         <p>
-          We hope that JakPeers provide the kindhearted yet busy people the platform to volunteer efficiently and practically.
+          JakPeers provides the kindhearted yet busy people the platform to volunteer and embrace humanity in a simple, effortless way.
         </p>
       </div>
       <div class="row section-diagrams">
